Background relocation and deletion of unecessary pictures

--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ body {
 
   color: var(--text);
   font-weight: 700;;
-  background: url("pictures/wood3.jpg") center;
+  background: url("./assets/wood.jpg") center;
   background-size: 100%;
 }
 
